# PythonBase

./: .gitlab-ci.yml  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django.yml
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  docker-compose.yaml  entrypoint.sh  requirements.txt
homework_06/app/: __init__.py  app.py
homework_06/app/migrations/versions/: 63b865c7fdfb_init.py
homework_06/app/templates/: index.html
homework_07/homework/application/: models.py  views.py
homework_07/homework/application/migrations/: 0001_initial.py
homework_07/homework/homework/: urls.py
homework_08/homework/application/: models.py
homework_08/homework/application/migrations/: 0001_initial.py
homework_08/homework/homework/: settings.py
homework_09/homework/application/: tests.py  views.py
homework_09/homework/application/templates/application/: animal_detail.html  animal_list.html  index.html
homework_09/homework/homework/: urls.py
testing/test_homework_01/: test_main.py
testing/test_homework_03/: test_app.py
testing/test_homework_04/: test_main.py
