[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["barmank32 <barmank@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
